gcc/testsuite/rust/rustc/ui/const-generics/issues/issue-71611.rs
// revisions: full min
#![cfg_attr(full, feature(const_generics))]
#![cfg_attr(full, allow(incomplete_features))]
#![cfg_attr(min, feature(min_const_generics))]

fn func<A, const F: fn(inner: A)>(outer: A) {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
    F(outer);
}

fn main() {}

